Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 FF
-
None
-
-
f2f4d8a6a (dev), a4a85d1b6 (dev), 2c57bb1fb (6.7)
Description
QWARN : qmltests::UnknownTestFunc() qt.core.qobject.connect: QObject::connect(QObject, QQmlComponent): invalid nullptr parameter Received signal 11 SEGV_ACCERR 000000000008 [0x00010526d050] [0x00010525a8f4] [0x00010526cf9c] [0x000199632c44] [0x00010ca74754] [0x00010ca74754] [0x00010ca74620] [0x00014be5fc7c] [0x00014be29d90] [0x00010cf48960] [0x00010c0eb75c] [0x00010cf48bc8] [0x00010c13d35c] [0x00010bb94c00] [0x00010ba39b50] [0x0001011d66ec] [0x0001011d6980] [0x0001011d9704] [0x0001011f953c] [0x00010bad8ab4] [0x000100fc51d0] [0x000100f83e38] [0x000199605430] [end of stack trace] qt-testrunner.py INFO: Test process exited with code: -11 qt-testrunner.py ERROR: Failed to parse the XML log file: /Users/qt/work/testresults/tst_qmltests-1698985168469.xml qt-testrunner.py ERROR: File Contents: <?xml version="1.0" encoding="UTF-8"?> <TestCase name="qmltests"> <Environment> <QtVersion>6.7.0</QtVersion> <QtBuild>Qt 6.7.0 (arm64-little_endian-lp64 shared (dynamic) release build; by Apple LLVM 14.0.0 (clang-1400.0.29.202))</QtBuild> <QTestVersion>6.7.0</QTestVersion> </Environment> <TestFunction name="WebEngineAction::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.0275"/> </TestFunction> <TestFunction name="WebEngineAction::test_actions"> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 0]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 1]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 2]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 3]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 4]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 5]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 6]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 7]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 8]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 9]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 10]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 11]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 12]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 13]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 14]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 15]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 16]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 17]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 18]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 19]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 20]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 21]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 22]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 23]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 24]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 25]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 26]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 27]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 28]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 29]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 30]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 31]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 32]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 33]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 34]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 35]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 36]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 37]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 38]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 39]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 40]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 41]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 42]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 43]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 44]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[row 45]]></DataTag> </Incident> <Duration msecs="5472.25"/> </TestFunction> <TestFunction name="WebEngineAction::test_editActionsWithExplicitFocus"> <Incident type="pass" file="" line="0" /> <Duration msecs="535.26"/> </TestFunction> <TestFunction name="WebEngineAction::test_editActionsWithInitialFocus"> <Incident type="pass" file="" line="0" /> <Duration msecs="415.202"/> </TestFunction> <TestFunction name="WebEngineAction::test_trigger"> <Incident type="pass" file="" line="0" /> <Duration msecs="160.661"/> </TestFunction> <TestFunction name="WebEngineAction::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.057042"/> </TestFunction> <TestFunction name="ActiveFocusOnPress::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.055917"/> </TestFunction> <TestFunction name="ActiveFocusOnPress::test_activeFocusOnPress"> <Incident type="pass" file="" line="0" /> <Duration msecs="1.17242"/> </TestFunction> <TestFunction name="ActiveFocusOnPress::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.02075"/> </TestFunction> <TestFunction name="WebEngineViewAudioMuted::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.043958"/> </TestFunction> <TestFunction name="WebEngineViewAudioMuted::test_audioMuted"> <Message type="qdebug" file="" line="0"> <Description><![CDATA[Compositor returned null texture]]></Description> </Message> <Incident type="pass" file="" line="0" /> <Duration msecs="129.28"/> </TestFunction> <TestFunction name="WebEngineViewAudioMuted::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.029458"/> </TestFunction> <TestFunction name="BasicProfiles::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.039125"/> </TestFunction> <TestFunction name="BasicProfiles::test_defaultProfile"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.217708"/> </TestFunction> <TestFunction name="BasicProfiles::test_nonOtrProfile"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.307583"/> </TestFunction> <TestFunction name="BasicProfiles::test_otrProfile"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.076417"/> </TestFunction> <TestFunction name="BasicProfiles::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.0175"/> </TestFunction> <TestFunction name="CertificateError::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="282.727"/> </TestFunction> <TestFunction name="CertificateError::test_error"> <Incident type="bpass" file="" line="0"> <DataTag><![CDATA[reject]]></DataTag> </Incident> <Incident type="bpass" file="" line="0"> <DataTag><![CDATA[defer_reject]]></DataTag> </Incident> <Message type="qinfo" file="" line="0"> <DataTag><![CDATA[defer_accept]]></DataTag> <Description><![CDATA[HttpServer: GET / 200 30]]></Description> </Message> <Incident type="bpass" file="" line="0"> <DataTag><![CDATA[defer_accept]]></DataTag> </Incident> <Duration msecs="1747.57"/> </TestFunction> <TestFunction name="CertificateError::test_fatalError"> <Incident type="bpass" file="" line="0" /> <Duration msecs="425.565"/> </TestFunction> <TestFunction name="CertificateError::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.059042"/> </TestFunction> <Message type="qwarn" file="" line="0"> <Description><![CDATA[qt.qml.typeresolution.cycle: Cyclic dependency detected between "file:///Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/mock-delegates/TestParams/FilePickerParams.qml" and "file:///Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/mock-delegates/TestParams/JSDialogParams.qml"]]></Description> </Message> <Message type="qwarn" file="" line="0"> <Description><![CDATA[qt.qml.typeresolution.cycle: Cyclic dependency detected between "file:///Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/mock-delegates/TestParams/FilePickerParams.qml" and "file:///Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/mock-delegates/TestParams/MenuParams.qml"]]></Description> </Message> <Message type="qwarn" file="" line="0"> <Description><![CDATA[qt.qml.typeresolution.cycle: Cyclic dependency detected between "file:///Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/mock-delegates/TestParams/JSDialogParams.qml" and "file:///Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/mock-delegates/TestParams/MenuParams.qml"]]></Description> </Message> <TestFunction name="WebEngineViewContextMenu::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.084542"/> </TestFunction> <TestFunction name="WebEngineViewContextMenu::test_contextMenuLinkAndSelectedText"> <Incident type="bfail" file="/Users/qt/work/qt/qtwebengine/tests/auto/quick/qmltests/data/tst_contextMenu.qml" line="85"> <Description><![CDATA[Compared values are not the same Actual (): Link Expected (): ]]></Description> </Incident> <Duration msecs="326.011"/> </TestFunction> <TestFunction name="WebEngineViewContextMenu::test_contextMenuMediaType"> <Incident type="pass" file="" line="0" /> <Duration msecs="460.068"/> </TestFunction> <TestFunction name="WebEngineViewContextMenu::test_contextMenuRequest"> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[defaultContextMenu]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[defaultContextMenuWithConnect]]></DataTag> </Incident> <Incident type="pass" file="" line="0"> <DataTag><![CDATA[dontShowDefaultContextMenu]]></DataTag> </Incident> <Duration msecs="593.324"/> </TestFunction> <TestFunction name="WebEngineViewContextMenu::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.064625"/> </TestFunction> <TestFunction name="WebEngineDatalist::initTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.067875"/> </TestFunction> <TestFunction name="WebEngineDatalist::test_filterSuggestion"> <Incident type="pass" file="" line="0" /> <Duration msecs="726.148"/> </TestFunction> <TestFunction name="WebEngineDatalist::test_keyboardNavigationAndAccept"> <Incident type="pass" file="" line="0" /> <Duration msecs="816.6"/> </TestFunction> <TestFunction name="WebEngineDatalist::test_showAndHide"> <Incident type="pass" file="" line="0" /> <Duration msecs="599.143"/> </TestFunction> <TestFunction name="WebEngineDatalist::cleanupTestCase"> <Incident type="pass" file="" line="0" /> <Duration msecs="0.064167"/> </TestFunction> <Message type="qwarn" file="" line="0"> <Description><![CDATA[qt.core.qobject.connect: QObject::connect(QObject, QQmlComponent): invalid nullptr parameter]]></Description> </Message> qt-testrunner.py ERROR: exception:ParseError no element found: line 308, column 0 qt-testrunner.py ERROR: The test executable probably crashed, see above for details qt-testrunner.py ERROR: Full test run failed repeatedly, aborting! CMake Error at tst_qmltestsWrapperRelWithDebInfo.cmake:18 (message): /Users/qt/work/install/libexec/qt-testrunner.py -- /Users/qt/work/qt/qtwebengine_standalone_tests/tests/auto/quick/qmltests/tst_qmltests execution failed with exit code 3. 18/43 Test #18: tst_qmltests ..............................***Failed 28.63 sec
The error was in "qt/qtwebengine", revision: 3c323feb37ef7e6f60daaae45f6614737cf9ae87
Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1703681217
Tested changes (refs/builds/qtci/dev/1698984915):
https://codereview.qt-project.org/c/qt/qtwebengine/+/515809/2 Update dependencies on 'dev' in qt/qtwebengine
Crash stack trace:
- thread #1, name = 'CrBrowserMain', queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x8)
* frame #0: 0x000000010250132c QtQml`QQmlEngine::baseUrl() const + 24
frame #1: 0x00000001024e8c0c QtQml`QQmlComponentPrivate::loadUrl(QUrl const&, QQmlComponent::CompilationMode) + 220
frame #2: 0x00000001024e8ad8 QtQml`QQmlComponent::QQmlComponent(QQmlEngine*, QUrl const&, QObject*) + 44
frame #3: 0x000000013630f05c libqtquickcontrols2nativestyleplugin.dylib`QQuickMacFocusFrame::createFocusFrame(QQmlContext*) + 100
frame #4: 0x00000001362dbdcc libqtquickcontrols2nativestyleplugin.dylib`QQuickFocusFrame::moveToItem(QQuickItem*) + 92
frame #5: 0x00000001018970b8 QtCore`void doActivate<false>(QObject*, int, void**) + 776
frame #6: 0x0000000100760600 QtGui`QGuiApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 1984
frame #7: 0x0000000101897320 QtCore`void doActivate<false>(QObject*, int, void**) + 1392
frame #8: 0x00000001007b2218 QtGui`QWindow::focusObjectChanged(QObject*) + 60
frame #9: 0x00000001012b4e10 QtQuick`QQuickDeliveryAgentPrivate::clearFocusInScope(QQuickItem*, QQuickItem*, Qt::FocusReason, QFlags<QQuickDeliveryAgentPrivate::FocusOption>) + 1672
frame #10: 0x0000000101159d00 QtQuick`QQuickItem::setParentItem(QQuickItem*) + 364
frame #11: 0x00000001002ae704 QtWebEngineQuick`QQuickWebEngineViewPrivate::~QQuickWebEngineViewPrivate() + 148
frame #12: 0x00000001002ae998 QtWebEngineQuick`QQuickWebEngineViewPrivate::~QQuickWebEngineViewPrivate() + 12
frame #13: 0x00000001002b171c QtWebEngineQuick`QQuickWebEngineView::~QQuickWebEngineView() + 56
frame #14: 0x00000001002d155c QtWebEngineQuick`QQmlPrivate::QQmlElement<QQuickWebEngineView>::~QQmlElement() + 28
frame #15: 0x00000001011f8c9c QtQuick`QQuickView::~QQuickView() + 76
frame #16: 0x00000001001b91d4 QtQuickTest`quick_test_main_with_setup(int, char*, char const, char const*, QObject*) + 4720
frame #17: 0x000000010000ab04 tst_qmltests`main(argc=1, argv=0x000000016fdff6b0) at tst_qmltests.cpp:270:13
frame #18: 0x000000019a8cff28 dyld`start + 2236