Fix for tst_qmltests crash

- As per current the implementation, if the parent Qucikitems has foucs, calling
setParentItem(nullptr) on it's children  might lead to crash.

Task-number: QTBUG-118750
Change-Id: I540e46658a21c14bb26f8f316fdd520f7b1a4742
Reviewed-by: Michael Brüning <michael.bruning@qt.io>